# sessionhub

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  settings.py
api/graphql/: context.py  schema.py
api/routes/: health.py
api/utils/: logger.py  request_id.py
infra/aws/bootstrap_lambda/: handler.py
infra/aws/terraform/db_ec2/: .terraform.lock.hcl  main.tf  outputs.tf  state.tf  user_data.sh  variables.tf  versions.tf
infra/aws/terraform/http_api/: http.tf  state.tf  variables.tf
infra/aws/terraform/lambda_boot/: .terraform.lock.hcl  lambda.tf  state.tf  versions.tf
infra/aws/terraform/vpc/: main.tf  outputs.tf  variables.tf
infra/aws/terraform/ws_api/: terraform.tfstate  ws.tf
scripts/: build_lambda.sh
tests/: test_health.py
